@@ -1,2 +1,3 @@
 
-Please see doc/documentation/install.html
+Please see doc/documentation/install.html or
+http://lucene.apache.org/pylucene/documentation/install.html
