@@ -4,6 +4,7 @@ Version 2.9.0 ->
  - unit tests ported to new API
  - removed InstantiatedIndex contrib from default build
  - with (partial) JCC Java generics support, a lot less downcasting is needed
+ - Java Lucene sources now included in PyLucene source distribution
  - 
 
 Version 2.4.1 -> 2.9.0
